fixed p alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@
   
   /* portfolio project images */
   /* TODO: Add portfolio project images here using background images*/
-  .cancer-cure {
+  .run-buddy {
     background-image: url("./assets/images/cancer.png");
   }
   
